# dephy-vending_machine-examples

./: Cargo.toml  Dockerfile  README.md  cliff.toml  deny.toml  docker-compose.yml
.github/workflows/: build_then_release.yml
balance-payment/: Anchor.toml  README.md  package.json
balance-payment-sdk/: Cargo.toml
balance-payment-sdk/src/: lib.rs
balance-payment/app/: .env.example  README.md  package.json
balance-payment/app/src/anchor/: balance_payment.json  balance_payment.ts  index.ts
balance-payment/app/src/app/: app-routes.tsx
balance-payment/app/src/components/account/: account-detail-feature.tsx
balance-payment/app/src/components/balance-payment/: balance-payment-data-access.tsx  balance-payment-feature.tsx
balance-payment/app/src/components/dashboard/: dashboard-feature.tsx
balance-payment/app/src/components/namespaces/: namespaces-data-access.tsx  namespaces-feature.tsx  namespaces-ui.tsx
balance-payment/app/src/components/ui/: ui-layout.tsx
balance-payment/bot_example_js/: index.ts  package.json
balance-payment/programs/balance-payment/: Cargo.toml  keypair.json
balance-payment/programs/balance-payment/src/: constants.rs  errors.rs  lib.rs
balance-payment/programs/balance-payment/src/instructions/: create_namespace.rs  deposit.rs  initialize.rs  lock.rs  mod.rs  pay.rs  register.rs  set_namespace_bot.rs  set_namespace_treasury.rs  settle.rs  update_namespace.rs  withdraw.rs
balance-payment/programs/balance-payment/src/state/: global.rs  lock.rs  mod.rs  namespace.rs
balance-payment/programs/balance-payment/src/utils/: ed25519.rs  message_prefix.rs  mod.rs
balance-payment/scripts/: cli.ts
balance-payment/tests/: balance-payment.ts
docker-compose-postgres-init/decharge-controller-docker-entrypoint-initdb.d/: migrate.sh
examples/decharge-controller/: Cargo.toml  README.md  docker-compose.yml
examples/decharge-controller/src/: message.rs
examples/decharge-controller/src/node/: message_handler.rs
examples/decharge-controller/src/server/: message_handler.rs
examples/gacha-controller/: Cargo.toml  README.md
examples/gacha-controller/src/: message.rs  relay_client.rs
examples/gacha-controller/src/node/: message_handler.rs
