[package]
name = "dephy-balance-payment-sdk"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
arrayref = "0.3"
borsh = "0.10.3"
curve25519-dalek = "4"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0.217", optional = true }
serde_json = "1.0.137"
serde_with = { version = "3.12.0", optional = true }
sha2 = "0.10"
solana-client = "2.1.10"
solana-program = "2.1.10"
solana-sdk = "2.1.10"
solana-zk-token-sdk = "2.1.10"
thiserror = "2.0.11"
tracing = "0.1.41"
