[package]
name = "dephy-decharge-controller"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
clap = "4.5.26"
dephy-balance-payment-sdk = { version = "0.1.0", path = "../../balance-payment-sdk" }
futures = "0.3.31"
nostr = "0.38.0"
nostr-sdk = "0.38.0"
sea-query = "0.32.1"
sea-query-binder = { version = "0.7.0", features = ["runtime-tokio", "sqlx-postgres"] }
serde = "1.0.217"
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["process", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bin]]
name = "dephy-decharge-controller-node"
path = "bin/dephy-decharge-controller-node.rs"

[[bin]]
name = "dephy-decharge-controller-server"
path = "bin/dephy-decharge-controller-server.rs"
