[package]
name = "dephy-gacha-controller"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
clap = "4.5.27"
dephy-balance-payment-sdk = { version = "0.1.0", path = "../../balance-payment-sdk" }
futures = "0.3.31"
nostr = "0.38.0"
nostr-sdk = "0.38.0"
serde = "1.0.217"
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["process", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
